AUTOMAKE_OPTIONS = foreign

noinst_LTLIBRARIES = libpe_bliss.la

libpe_bliss_la_SOURCES = entropy.cpp file_version_info.cpp message_table.cpp \
	pe_base.cpp pe_bound_import.cpp pe_checksum.cpp pe_debug.cpp \
	pe_directory.cpp pe_dotnet.cpp pe_exception.cpp \
	pe_exception_directory.cpp pe_exports.cpp pe_factory.cpp pe_imports.cpp \
	pe_load_config.cpp pe_properties.cpp pe_properties_generic.cpp \
	pe_rebuilder.cpp pe_relocations.cpp pe_resource_manager.cpp \
	pe_resources.cpp pe_rich_data.cpp pe_section.cpp pe_tls.cpp utils.cpp

#pe_resource_viewer.cpp 
#libpe_bliss_la_CPPFLAGS = -O2 -Wall -fPIC -DPIC -I.


